--- a/webiste.html
+++ b/webiste.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
+<meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html lang="en">
 <html>
-  <body>
-    <h1>Hello World</h1>
+  <body text="white">
+    <h1 style="text-align: center;">Hello World</h1>
     <a href="https://twitter.com/wggear" target="_blank">
-<img src="./Image/Aila.jpg" title="Aila" alt="Aila" height="150" width="150"></a>
-  </body>
+      
+<img src="./Image/Aila.jpg" title="Aila" alt="Aila" height="150" width="150" style="display: block; margin-left: auto; margin-right: auto;"></a>
+<body style="background-color: black;"</body>
 </html>
