--- a/webiste.html
+++ b/webiste.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
-<meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <html lang="en">
-<html>
-  <body text="white">
-    <h1 style="text-align: center;">Hello World</h1>
-    <a href="https://twitter.com/wggear" target="_blank">
-      
-<img src="./Image/Aila.jpg" title="Aila" alt="Aila" height="150" width="150" style="display: block; margin-left: auto; margin-right: auto;"></a>
-<body style="background-color: black;"</body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boo</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <!-- Navbar -->
+    <div class="Navbar">
+        <ul class="Navbar2">
+            <li class="Navbarli">
+                <a href="index.html" class="navbarli1">Home</a>
+            </li>
+            <li class="Navbarli">
+                <a href="about.html" class="navbarli1">About Me</a>
+            </li>
+            <li class="Navbarli">
+                <a href="donate.html" class="navbarli1">Donate</a>
+            </li>
+        </ul>
+    </div>
+    <!-- Navbar End -->
+
+    <!-- Content -->
+    <p class="awalan">AILAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA</p>
+    
+    <div class="img-container">
+        <a href="https://github.com/wggear" target="_blank">
+        <img src="./Image/aila2.png" class="img1"/></a>
+
+        <a href="https://twitter.com/wggear" target="_blank">
+        <img src="./Image/Aila new.png" class="img1"/></a>
+    </div>
+    <!-- Content End -->
+
+    <!-- Footer -->
+    <div class="Footer">
+        <h1>Help Me</h1>
+    </div>
+    <!-- Footer End -->
+</body>
 </html>
